[package]
name = "gh-cli"
version = "0.1.0"
authors = ["Thomas Eizinger <thomas@eizinger.io>"]
edition = "2018"
autobins = false

[[bin]]
name = "gh"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.2.18"
config = "0.9.3"
directories = "2.0.1"
serde = { version = "1.0.97", features = ["derive"] }
serde_json = "1.0.40"
reqwest = "0.9.19"
tokio = "0.1.22"
regex = "1.2.0"
dialoguer = "0.4.0"
indicatif = "0.11.0"
